--- a/vite-project/src/components/sidebar/sidebar.css
+++ b/vite-project/src/components/sidebar/sidebar.css
@@ -1,21 +1,21 @@
 .sidebar-container{
-    width: 100%;
+    width: 100vw;
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 5%;
 }
 
 .sidebar-buttons{
     display: flex;
     align-items: center;
     justify-content: center; 
-    gap: 15%;
+    gap: 10%;
 }
 
 .profile-img{
     width: 50px;
     height: 50px;
     border-radius: 20px;
-    margin-top: 20px;
 }
